--- a/index.html
+++ b/index.html
@@ -217,8 +217,10 @@
     </main>
 
     <!-- Footer -->
-    <footer class="py-6 text-center text-gray-600 text-xs">
-        &copy; 2025 PhishGuard Local. No data leaves your browser.
+    <footer class="py-6 text-center text-gray-600 text-xs space-y-1">
+        <div>&copy; 2025 PhishGuard Local. No data leaves your browser.</div>
+        <div>Crafted with &#10084; by Adarsh Dubey</div>
+        <div class="text-[10px]  text-gray-500">AI tools used</div>
     </footer>
 
     <!-- LOG MODAL -->
